--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,9 +18,7 @@ jobs:
       - run: python3 -m pip install --user pytest mypy pylint
 
       - run: python3 -m pip install --user -r requirements.txt
-      - run: python3 -m mypy   *.py
-      - run: python3 -m pylint *.py
-      - run: python3 -m pytest *.py
+      - run: ./lint
 
 
 workflows:
