--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -25,6 +25,7 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
+        ./.ci/install-deps
         python -m pip install --upgrade pip
         if [[ -f requirements.txt     ]]; then pip install -r requirements.txt     ; fi
         if [[ -f requirements-dev.txt ]]; then pip install -r requirements-dev.txt ; fi
