--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -1,35 +1,47 @@
-name: Python package
+# see https://github.com/karlicoss/pymplate for up-to-date reference
 
-on: [push]
+name: CI
+on:
+  push:
+    branches: '*'
+    tags: 'v[0-9]+.*' # only trigger on 'release' tags for PyPi
+    # Ideally I would put this in the pypi job... but github syntax doesn't allow for regexes there :shrug:
+    # P.S. fuck made up yaml DSLs.
+    # TODO cron?
+  workflow_dispatch: # needed to trigger workflows manually
+
+env:
+  # useful for scripts & sometimes tests to know
+  CI: true
 
 jobs:
   build:
-
-    runs-on: ubuntu-latest
     strategy:
-      max-parallel: 4
       matrix:
-        python-version: [3.6, 3.7, 3.8]
+        platform: [ubuntu-latest]
+        python-version: [3.8]
+
+    runs-on: ${{ matrix.platform }}
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Checkout submodules
-      shell: bash
-      run: |
-        auth_header="$(git config --local --get http.https://github.com/.extraheader)"
-        git submodule sync --recursive
-        git -c "http.extraheader=$auth_header" -c protocol.version=2 submodule update --init --force --recursive --depth=1      
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v1
+    # ugh https://github.com/actions/toolkit/blob/main/docs/commands.md#path-manipulation
+    - run: echo "$HOME/.local/bin" >> $GITHUB_PATH
+
+    - uses: actions/setup-python@v1
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Install dependencies
+
+    - uses: actions/checkout@v2
+      with:
+        submodules: recursive
+
+    # uncomment for SSH debugging
+    # - uses: mxschmitt/action-tmate@v2
+
+    - name: install dependencies
       run: |
-        ./.ci/install-deps
-        python -m pip install --upgrade pip
+        .ci/install-deps
         if [[ -f requirements.txt     ]]; then pip install -r requirements.txt     ; fi
         if [[ -f requirements-dev.txt ]]; then pip install -r requirements-dev.txt ; fi
-    - name: Lint
-      run: |
-        pip install mypy pylint pytest
-        CI=yes ./lint
+
+    - run: .ci/run
