--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -7,8 +7,10 @@ on:
     tags: 'v[0-9]+.*' # only trigger on 'release' tags for PyPi
     # Ideally I would put this in the pypi job... but github syntax doesn't allow for regexes there :shrug:
     # P.S. fuck made up yaml DSLs.
-    # TODO cron?
+  pull_request: # needed to trigger on others' PRs
+  # Note that people who fork it need to go to "Actions" tab on their fork and click "I understand my workflows, go ahead and enable them".
   workflow_dispatch: # needed to trigger workflows manually
+  # todo cron?
 
 env:
   # useful for scripts & sometimes tests to know
@@ -36,12 +38,12 @@ jobs:
         submodules: recursive
 
     # uncomment for SSH debugging
-    # - uses: mxschmitt/action-tmate@v2
+    # - uses: mxschmitt/action-tmate@v3
 
-    - name: install dependencies
-      run: |
-        .ci/install-deps
-        if [[ -f requirements.txt     ]]; then pip install -r requirements.txt     ; fi
-        if [[ -f requirements-dev.txt ]]; then pip install -r requirements-dev.txt ; fi
+    # most pytest tests won't work in containers, so just running mypy
+    - run: .ci/run -e mypy
 
-    - run: .ci/run
+    - uses: actions/upload-artifact@v2
+      with:
+        name: .coverage.mypy_${{ matrix.platform }}_${{ matrix.python-version }}
+        path: .coverage.mypy/
