--- a/tox.ini
+++ b/tox.ini
@@ -10,12 +10,12 @@ passenv = CI CI_*
 commands =
     pip install -e .[testing]
     # posargs allow test filtering, e.g. tox ... -- -k test_name
-    python -m pytest dron.py {posargs}
+    python -m pytest dron {posargs}
 
 [testenv:mypy]
 commands =
     pip install -e .[linting]
-    python -m mypy dron.py                           \
+    python -m mypy dron                              \
                    # txt report is a bit more convenient to view on CI
                    --txt-report  .coverage.mypy      \
                    --html-report .coverage.mypy      \
