--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,16 +12,15 @@ on:
   workflow_dispatch: # needed to trigger workflows manually
   # todo cron?
 
-env:
-  # useful for scripts & sometimes tests to know
-  CI: true
 
 jobs:
   build:
     strategy:
       matrix:
         platform: [ubuntu-latest]
-        python-version: [3.8]
+        python-version: ['3.8', '3.9', '3.10', '3.11']
+        # vvv just an example of excluding stuff from matrix
+        # exclude: [{platform: macos-latest, python-version: '3.6'}]
 
     runs-on: ${{ matrix.platform }}
 
@@ -29,21 +28,23 @@ jobs:
     # ugh https://github.com/actions/toolkit/blob/main/docs/commands.md#path-manipulation
     - run: echo "$HOME/.local/bin" >> $GITHUB_PATH
 
-    - uses: actions/setup-python@v1
+    - uses: actions/setup-python@v4
       with:
         python-version: ${{ matrix.python-version }}
 
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
       with:
         submodules: recursive
 
     # uncomment for SSH debugging
     # - uses: mxschmitt/action-tmate@v3
 
+    # explicit bash command is necessary for Windows CI runner, otherwise it thinks it's cmd...
     # most pytest tests won't work in containers, so just running mypy
-    - run: .ci/run -e mypy
+    - run: bash .ci/run -e mypy
 
-    - uses: actions/upload-artifact@v2
+    - if: matrix.platform == 'ubuntu-latest'  # no need to compute coverage for other platforms
+      uses: actions/upload-artifact@v3
       with:
         name: .coverage.mypy_${{ matrix.platform }}_${{ matrix.python-version }}
         path: .coverage.mypy/
