--- a/tox.ini
+++ b/tox.ini
@@ -2,9 +2,16 @@
 minversion = 3.5
 # relies on the correct version of Python installed
 envlist = tests,mypy
+# https://github.com/tox-dev/tox/issues/20#issuecomment-247788333
+# hack to prevent .tox from crapping to the project directory
+toxworkdir={env:TOXWORKDIR_BASE:}{toxinidir}/.tox
 
 [testenv]
-passenv = CI CI_*
+passenv = 
+# useful for tests to know they are running under ci
+  CI CI_*
+# respect user's cache dirs to prevent tox from crapping into project dir
+  MYPY_CACHE_DIR PYTHONPYCACHEPREFIX
 
 [testenv:tests]
 commands =
@@ -15,7 +22,8 @@ commands =
 [testenv:mypy]
 commands =
     pip install -e .[linting]
-    python -m mypy dron                              \
+    python -m mypy --install-types --non-interactive \
+                   dron                              \
                    # txt report is a bit more convenient to view on CI
                    --txt-report  .coverage.mypy      \
                    --html-report .coverage.mypy      \
