--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,8 +17,8 @@ jobs:
   build:
     strategy:
       matrix:
-        platform: [ubuntu-latest]
-        python-version: ['3.8', '3.9', '3.10', '3.11']
+        platform: [ubuntu-latest, macos-latest]
+        python-version: ['3.9', '3.10', '3.11']
         # vvv just an example of excluding stuff from matrix
         # exclude: [{platform: macos-latest, python-version: '3.6'}]
 
