--- a/tox.ini
+++ b/tox.ini
@@ -7,7 +7,9 @@ envlist = tests,mypy
 toxworkdir={env:TOXWORKDIR_BASE:}{toxinidir}/.tox
 
 [testenv]
-passenv = 
+# TODO how to get package name from setuptools?
+package_name = "dron"
+passenv =
 # useful for tests to know they are running under ci
   CI
   CI_*
@@ -15,18 +17,22 @@ passenv =
   MYPY_CACHE_DIR
   PYTHONPYCACHEPREFIX
 
+
 [testenv:tests]
 commands =
-    pip install -e .[testing]
+    {envpython} -m pip install -e .[testing]
     # posargs allow test filtering, e.g. tox ... -- -k test_name
-    python -m pytest dron {posargs}
+    {envpython} -m pytest \
+        --pyargs {[testenv]package_name} \
+        {posargs}
+
 
 [testenv:mypy]
 commands =
-    pip install -e .[linting]
-    python -m mypy --install-types --non-interactive \
-                   dron                              \
-                   # txt report is a bit more convenient to view on CI
-                   --txt-report  .coverage.mypy      \
-                   --html-report .coverage.mypy      \
-                   {posargs}
+    {envpython} -m pip install -e .[linting]
+    {envpython} -m mypy --install-types --non-interactive \
+        -p {[testenv]package_name}       \
+        # txt report is a bit more convenient to view on CI
+        --txt-report  .coverage.mypy     \
+        --html-report .coverage.mypy     \
+        {posargs}
