--- a/tox.ini
+++ b/tox.ini
@@ -16,6 +16,8 @@ passenv =
 # respect user's cache dirs to prevent tox from crapping into project dir
   MYPY_CACHE_DIR
   PYTHONPYCACHEPREFIX
+# necessary for systemd calls to work in tests
+  XDG_RUNTIME_DIR
 
 
 [testenv:tests]
