--- a/tox.ini
+++ b/tox.ini
@@ -40,7 +40,7 @@ commands =
 
 [testenv:mypy]
 commands =
-    {envpython} -m pip install --use-pep517 -e .[testing,optional]
+    {envpython} -m pip install --use-pep517 -e .[testing,optional,notify-telegram]
     {envpython} -m mypy --install-types --non-interactive \
         -p {[testenv]package_name}       \
         # txt report is a bit more convenient to view on CI
