general: use __main__ for entry point, with a fallback in __init__; move bulk of code to dron.py

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,7 @@ dependencies = [
 # Homepage = "https://github.com/karlicoss/pymplate"
 ##
 [project.scripts]
-dron = "dron:main"
+dron = "dron.__main__:main"
 
 [project.optional-dependencies]
 testing = [
