--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ dependencies = [
     "prompt_toolkit",  # CLI
     "tabulate"      ,  # for monitor
     "termcolor"     ,  # for monitor
+    "tzlocal"       ,  # for monitor, to determine host timezone
     "mypy"          ,  # for checking units
     "loguru"        ,  # nicer logging
     "dbus-python; platform_system != 'Darwin'",  # dbus interface to systemd
