--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,9 +5,10 @@ name = "dron"
 dependencies = [
     "click"         ,  # CLI
     "prompt_toolkit",  # CLI
-    "tabulate"      ,  # for monitor
-    "termcolor"     ,  # for monitor
     "tzlocal"       ,  # for monitor, to determine host timezone
+    "textual"       ,  # for 'new' monitor
+    "tabulate"      ,  # for 'old' monitor
+    "termcolor"     ,  # for 'old' monitor
     "mypy"          ,  # for checking units
     "loguru"        ,  # nicer logging
     "dbus-python; platform_system != 'Darwin'",  # dbus interface to systemd
