--- a/ruff.toml
+++ b/ruff.toml
@@ -1,5 +1,3 @@
-target-version = "py38"  # NOTE: inferred from pyproject.toml if present
-
 lint.extend-select = [
     "F",    # flakes rules -- default, but extend just in case
     "E",    # pycodestyle  -- default, but extend just in case
@@ -9,7 +7,7 @@ lint.extend-select = [
     "C4",   # flake8-comprehensions -- unnecessary list/map/dict calls
     "COM",  # trailing commas
     "EXE",  # various checks wrt executable files
-    # "I",    # sort imports
+    "I",    # sort imports
     "ICN",  # various import conventions
     "FBT",  # detect use of boolean arguments
     "FURB", # various rules
