--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "loguru"        ,  # nicer logging
     "dbus-python; platform_system != 'Darwin'",  # dbus interface to systemd
 ]
+requires-python = ">=3.9"
 # FIXME dbus
 
 ## these need to be set if you're planning to upload to pypi
