--- a/tox.ini
+++ b/tox.ini
@@ -19,19 +19,23 @@ passenv =
     RUFF_CACHE_DIR
 # necessary for systemd calls to work in tests
     XDG_RUNTIME_DIR
+usedevelop = true  # for some reason tox seems to ignore "-e ." in deps section??
+# note: --use-pep517 here is necessary for tox --parallel flag to work properly
+# otherwise it seems that it tries to modify .eggs dir in parallel and it fails
+install_command = {envpython} -m pip install --use-pep517 {opts} {packages}
 
 
 [testenv:ruff]
+deps =
+    -e .[testing]
 commands =
-    {envpython} -m pip install --use-pep517 -e .[testing]
     {envpython} -m ruff check src/
 
 
-# note: --use-pep517 here is necessary for tox --parallel flag to work properly
-# otherwise it seems that it tries to modify .eggs dir in parallel and it fails
 [testenv:tests]
+deps =
+    -e .[testing]
 commands =
-    {envpython} -m pip install --use-pep517 -e .[testing]
     # posargs allow test filtering, e.g. tox ... -- -k test_name
     {envpython} -m pytest \
         --pyargs {[testenv]package_name} \
@@ -39,8 +43,9 @@ commands =
 
 
 [testenv:mypy]
+deps =
+    -e .[testing,optional,notify-telegram]
 commands =
-    {envpython} -m pip install --use-pep517 -e .[testing,optional,notify-telegram]
     {envpython} -m mypy --install-types --non-interactive \
         -p {[testenv]package_name}       \
         # txt report is a bit more convenient to view on CI
