--- a/ruff.toml
+++ b/ruff.toml
@@ -1,3 +1,8 @@
+# NOTE: version is inferred from pyproject.toml if present
+#   however, if ruff.toml is separate, pyproject isn't even parsed..
+#   see https://github.com/astral-sh/ruff/issues/10299
+target-version = "py312"
+
 lint.extend-select = [
     "F",    # flakes rules -- default, but extend just in case
     "E",    # pycodestyle  -- default, but extend just in case
@@ -28,6 +33,7 @@ lint.extend-select = [
     "PTH",  # pathlib migration
     "ARG",  # unused argument checks
     "A",    # builtin shadowing
+    "G",    # logging stuff
     # "EM",  # TODO hmm could be helpful to prevent duplicate err msg in traceback.. but kinda annoying
 
     # "ALL", # uncomment this to check for new rules!
@@ -59,12 +65,6 @@ lint.ignore = [
 
 ## might be nice .. but later and I don't wanna make it strict
     "E402",  # Module level import not at top of file
-
-### maybe consider these soon
-    # sometimes it's useful to give a variable a name even if we don't use it as a documentation
-    # on the other hand, often is a sign of error
-    "F841",  # Local variable `count` is assigned to but never used
-###
 
     "RUF100",  # unused noqa -- handle later
     "RUF012",  # mutable class attrs should be annotated with ClassVar... ugh pretty annoying for user configs
@@ -106,7 +106,6 @@ lint.ignore = [
     "PLW0603",  # global variable update.. we usually know why we are doing this
     "PLW2901",  # for loop variable overwritten, usually this is intentional
 
-    "PT004",  # deprecated rule, will be removed later
     "PT011",  # pytest raises should is too broad
     "PT012",  # pytest raises should contain a single statement
 
