--- a/tox.ini
+++ b/tox.ini
@@ -20,21 +20,17 @@ passenv =
 # necessary for systemd calls to work in tests
     XDG_RUNTIME_DIR
 usedevelop = true  # for some reason tox seems to ignore "-e ." in deps section??
-# note: --use-pep517 here is necessary for tox --parallel flag to work properly
-# otherwise it seems that it tries to modify .eggs dir in parallel and it fails
-install_command = {envpython} -m pip install --use-pep517 {opts} {packages}
+uv_seed = true  # seems necessary so uv creates separate venvs per tox env?
 
 
 [testenv:ruff]
-deps =
-    -e .[testing]
+dependency_groups = testing
 commands =
     {envpython} -m ruff check src/
 
 
 [testenv:tests]
-deps =
-    -e .[testing]
+dependency_groups = testing
 commands =
     # posargs allow test filtering, e.g. tox ... -- -k test_name
     {envpython} -m pytest \
@@ -43,10 +39,11 @@ commands =
 
 
 [testenv:mypy]
+dependency_groups = testing
 deps =
-    -e .[testing,optional,notify-telegram]
+    -e .[notify-telegram]
 commands =
-    {envpython} -m mypy --install-types --non-interactive \
+    {envpython} -m mypy --no-install-types \
         -p {[testenv]package_name}       \
         # txt report is a bit more convenient to view on CI
         --txt-report  .coverage.mypy     \
