general: migrate to use drontab as package instead of a single script
over years of using it became clear that

- drontab isn't necessarily a simple script, if you use multiple
  hostnames, you end up with submodules/common code etc etc

  so drontab works better as a proper python package rather than a
  collection of random files that import each other in a flat hirarchy

- for the same reason =edit= mode doesn't really work.

  it seems much more sensible to edit the drontab package in your IDE

  so 'edit' mode is deleted now

- for the same reason =lint= mode doesn't really work

  ultimately it's impossible to guess what ruff/mypy/other linters and
  whate settings they are gonna use with these

  and also the best way to check drontab is ultimately to import it and
  try to build a state -- linting doesn't add much here really from the
  perspective of dron

  so all extra checks are removed from =lint= now, it will likely be
  depreated in the future in favor of dry run

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,7 +37,7 @@ notify-telegram = [
     "telegram-send>=0.37",
 ]
 [dependency-groups]
-testing = [
+dev = [
     "pytest",
     "ruff",
     "mypy",
