--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,7 +37,7 @@ notify-telegram = [
     "telegram-send>=0.37",
 ]
 [dependency-groups]
-dev = [
+testing = [
     "pytest",
     "ruff",
     "mypy",
