--- a/tox.ini
+++ b/tox.ini
@@ -19,14 +19,17 @@ passenv =
     RUFF_CACHE_DIR
 # necessary for systemd calls to work in tests
     XDG_RUNTIME_DIR
-usedevelop = true  # for some reason tox seems to ignore "-e ." in deps section??
-uv_seed = true  # seems necessary so uv creates separate venvs per tox env?
+
+# default is 'editable', in which tox builds wheel first for some reason? not sure if makes much sense
+package = uv-editable
 
 
 [testenv:ruff]
+skip_install = true
 dependency_groups = testing
 commands =
-    {envpython} -m ruff check src/
+    {envpython} -m ruff check src/ \
+        {posargs}
 
 
 [testenv:tests]
@@ -40,8 +43,7 @@ commands =
 
 [testenv:mypy]
 dependency_groups = testing
-deps =
-    -e .[notify-telegram]
+extras = notify-telegram
 commands =
     {envpython} -m mypy --no-install-types \
         -p {[testenv]package_name}       \
