--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,10 @@
 [tox]
-minversion = 3.21
+minversion = 4
+
 # relies on the correct version of Python installed
+# (we rely on CI for the test matrix)
 envlist = ruff,tests,mypy,ty
+
 # https://github.com/tox-dev/tox/issues/20#issuecomment-247788333
 # hack to prevent .tox from crapping to the project directory
 toxworkdir = {env:TOXWORKDIR_BASE:}{toxinidir}/.tox
@@ -19,13 +22,14 @@ pass_env =
     RUFF_CACHE_DIR
 # necessary for systemd calls to work in tests
     XDG_RUNTIME_DIR
+
 set_env =
 # do not add current working directory to pythonpath
 # generally this is more robust and safer, prevents weird issues later on
     PYTHONSAFEPATH=1
 
-# default is 'editable', in which tox builds wheel first for some reason? not sure if makes much sense
-package = uv-editable
+runner = uv-venv-lock-runner
+uv_sync_locked = false
 
 
 [testenv:ruff]
@@ -46,8 +50,7 @@ commands =
 
 
 [testenv:mypy]
-dependency_groups = testing
-extras = notify-telegram
+dependency_groups = typecheck
 commands =
     {envpython} -m mypy --no-install-types \
         -p {[testenv]package_name}       \
@@ -60,7 +63,7 @@ commands =
 
 
 [testenv:ty]
-dependency_groups = testing
+dependency_groups = typecheck
 commands =
     {envpython} -m ty \
         check \
